--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,44 @@
     <title>Acceso denegado</title>
 </head>
 <body>
-    <h3>Acceso denegado!</h3>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div id="g_id_onload"
+         data-client_id="84016955149-jtsvmsarpt7p6morrc3d2sff63va64vv.apps.googleusercontent.com"
+         data-auto_prompt="false"
+         data-callback="handleCredentialResponse">
+      </div>
+      <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-shape="rectangular"
+         data-logo_alignment="left">
+      </div>
+
+    <h3>Google Sign-in</h3>
+
+    <script>
+        function handleCredentialResponse(response) {
+            // Google Token: ID_TOKEN
+            //console.log('id_token: ' + response.credential);
+            const body = { id_token: response.credential }
+
+            fetch('http://localhost:8080/api/auth/google', {
+                // Configurar el método de la peticion ya que por defecto es GET
+                method: 'POST',
+                headers: {
+                    'Content-Type':'application/json'
+                },
+                body: JSON.stringify(body)
+            })
+                .then( resp => resp.json() )        //Serializar el readable stream
+                .then( resp => {
+                    console.log( resp )
+                })
+                .catch( console.warn );
+        }
+      </script>
+      
 </body>
 </html>
