--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             //console.log('id_token: ' + response.credential);
             const body = { id_token: response.credential }
 
-            fetch('http://localhost:8080/api/auth/google', {
+            fetch( window.location.hostname.includes('localhost') ? 'http://localhost:8080/api/auth/google' : 'https://restserver-nodejs-fujarte.herokuapp.com/api/auth/google', {
                 // Configurar el método de la peticion ya que por defecto es GET
                 method: 'POST',
                 headers: {
